# cmake_recipe

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: simple_example.cpp  simple_lib.cpp
tools/: build.sh
